--- a/index.html
+++ b/index.html
@@ -4,27 +4,56 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>合同会社アンダーウィル</title>
+
+  <!-- Google Fonts: M PLUS Rounded 1c -->
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet" />
+
   <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #fefae0;
-      margin: 0; padding: 0;
+    /* リセットと基本設定 */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
+
+    body {
+      font-family: 'M PLUS Rounded 1c', 'Roboto', sans-serif;
+      background-color: #fefae0;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+
+    /* ヘッダー */
     header {
-      height: 60px;
-      background: #fdf497;
+      height: 80px;
+      background: linear-gradient(90deg, #fdf497, #a1c4fd);
       display: flex;
       align-items: center;
       justify-content: center;
-      font-weight: bold;
       position: fixed;
-      width: 100%;
       top: 0;
+      left: 0;
+      width: 100%;
+      padding: 0 5%;
+      border-bottom: 1px solid #ccc;
       z-index: 100;
     }
+
+    .logo-container img {
+      height: 60px;
+      width: auto;
+      display: block;
+    }
+
+    /* 企業理念（横流し） */
     .company-vision-wrapper {
       position: fixed;
-      top: 60px;
+      top: 80px; /* ヘッダーの下 */
       width: 100%;
       height: 40px;
       background-color: #fff3b0;
@@ -34,15 +63,19 @@
       align-items: center;
       z-index: 90;
     }
+
     .company-vision {
       white-space: nowrap;
       font-weight: 700;
       font-size: 1.2rem;
-      padding-left: 100%;
-      display: inline-block;
       color: #003049;
       font-family: 'Playfair Display', serif;
       will-change: transform;
+      padding-left: var(--padding-left, 0);
+      animation-name: visionScroll;
+      animation-timing-function: linear;
+      animation-iteration-count: infinite;
+      animation-duration: var(--animation-duration, 15s);
     }
 
     @keyframes visionScroll {
@@ -50,82 +83,155 @@
         transform: translateX(0);
       }
       to {
-        transform: translateX(-100%);
+        transform: translateX(var(--scroll-distance));
       }
     }
 
     main {
-      padding: 120px 20px 40px;
       max-width: 1100px;
-      margin: 0 auto;
+      margin: 140px auto 60px;
+      padding: 0 5%;
     }
+
+    /* 企業概要 */
+    .company-info {
+      background-color: #ffffff;
+      padding: 40px;
+      border-radius: 10px;
+      margin-bottom: 60px;
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
+    }
+
+    .company-info h3 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2.2rem;
+      color: #003566;
+      margin-bottom: 24px;
+    }
+
+    .company-info .info-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 16px 40px;
+      font-size: 1.1rem;
+      color: #444;
+    }
+
+    @media (max-width: 768px) {
+      .company-info .info-grid {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    /* 社員紹介 */
+    .team-section {
+      margin-bottom: 60px;
+    }
+
+    .team-section h3 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2rem;
+      margin-bottom: 24px;
+      color: #003566;
+    }
+
     .team-members {
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
       justify-content: flex-start;
+      overflow-x: auto;
+      padding-bottom: 10px; /* スクロールバー余白 */
     }
+
     .team-member {
       background: #fff;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      width: calc((100% - 60px) / 3);
+      flex: 0 0 300px;
       max-width: 320px;
-      box-sizing: border-box;
       padding: 16px;
+      box-sizing: border-box;
       text-align: center;
-      font-family: 'Roboto', sans-serif;
     }
-    .team-member img {
+
+    .team-member .photo img {
       width: 100%;
-      height: 280px;
-      object-fit: cover;
       border-radius: 10px;
-      margin-bottom: 12px;
+      object-fit: cover;
+      aspect-ratio: 4 / 3;
     }
-    .team-member h4 {
-      margin-bottom: 6px;
+
+    .team-member .info h4 {
+      margin-top: 12px;
+      font-size: 1.3rem;
       color: #003049;
     }
-    .role {
-      font-style: italic;
+
+    .team-member .role {
+      font-weight: 500;
       color: #666;
-      margin-bottom: 12px;
-    }
-    .desc {
-      font-size: 0.9rem;
-      color: #444;
+      margin: 6px 0;
     }
 
-    /* 応募ボタン */
+    .team-member .desc {
+      font-size: 0.95rem;
+      color: #555;
+    }
+
+    /* 採用情報 */
+    .recruit-section {
+      margin-bottom: 60px;
+    }
+
+    .recruit-section h3 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2rem;
+      color: #003566;
+      margin-bottom: 16px;
+    }
+
+    .recruit-section p {
+      margin-bottom: 12px;
+      font-size: 1.1rem;
+      color: #333;
+    }
+
     .recruit-section a {
       display: inline-block;
-      margin-top: 20px;
-      background: #003049;
+      padding: 10px 20px;
+      background-color: #003049;
       color: #fff;
-      padding: 12px 28px;
       border-radius: 6px;
-      font-weight: 600;
-      text-decoration: none;
-      transition: background-color 0.3s ease;
-    }
-    .recruit-section a:hover {
-      background: #005a87;
+      font-weight: 700;
+      transition: background-color 0.3s;
     }
 
-    /* スマホ対応 */
-    @media (max-width: 800px) {
-      .team-member {
-        width: 100%;
-      }
+    .recruit-section a:hover {
+      background-color: #005f8a;
+    }
+
+    /* フッター */
+    footer {
+      text-align: center;
+      padding: 20px 0;
+      background-color: #fdf497;
+      font-size: 0.9rem;
+      color: #333;
+      border-top: 1px solid #ccc;
     }
   </style>
 </head>
 <body>
+
+  <!-- ヘッダー -->
   <header>
-    合同会社アンダーウィル
+    <div class="logo-container">
+      <img src="https://github.com/machichi2525/my-website1/blob/main/uw_%E3%83%AD%E3%82%B4%E2%91%A0.jpg?raw=true" alt="合同会社アンダーウィル ロゴ" />
+    </div>
   </header>
 
+  <!-- 企業理念（横スクロール） -->
   <div class="company-vision-wrapper">
     <div class="company-vision" id="companyVision">
       企業理念：私たちはお客様の未来を照らし、革新をもたらす企業であり続けます。
@@ -133,63 +239,98 @@
   </div>
 
   <main>
+
+    <!-- 企業概要 -->
+    <section class="company-info">
+      <h3>企業概要</h3>
+      <div class="info-grid">
+        <p><strong>会社名：</strong>合同会社アンダーウィル</p>
+        <p><strong>所在地：</strong>〒????-???? 〇〇〇〇</p>
+        <p><strong>代表者：</strong>代表取締役　栁本 浩汰</p>
+        <p><strong>設立：</strong>2024年3月14日</p>
+        <p><strong>資本金：</strong>15万円</p>
+        <p><strong>従業員数：</strong>20名（2025年9月現在）</p>
+        <p><strong>事業内容：</strong>通信事業、Webサイト制作、デジタルマーケティング支援、システム開発</p>
+        <p><strong>主要取引先：</strong>株式会社〇〇、株式会社△△、株式会社□□</p>
+        <p><strong>取引銀行：</strong>〇〇銀行 〇〇支店</p>
+        <p><strong>URL：</strong>https://www.〇〇〇</p>
+      </div>
+    </section>
+
+    <!-- 社員紹介 -->
     <section class="team-section">
       <h3>社員紹介</h3>
       <div class="team-members">
         <div class="team-member">
-          <img src="https://raw.githubusercontent.com/machichi2525/my-website1/main/S__5603390.jpg" alt="栁本 浩汰" />
-          <h4>栁本 浩汰</h4>
-          <p class="role">代表取締役社長</p>
-          <p class="desc">企業理念を基に、新たな未来を切り開いています。</p>
+          <div class="photo">
+            <img src="https://raw.githubusercontent.com/machichi2525/my-website1/main/S__5603390.jpg" alt="栁本 浩汰" />
+          </div>
+          <div class="info">
+            <h4>栁本 浩汰</h4>
+            <p class="role">代表取締役社長</p>
+            <p class="desc">企業理念を基に、新たな未来を切り開いています。</p>
+          </div>
         </div>
+
         <div class="team-member">
-          <img src="https://via.placeholder.com/400" alt="田中 満里菜" />
-          <h4>田中 満里菜</h4>
-          <p class="role">営業部 部長</p>
-          <p class="desc">お客様のニーズを最優先に、プロジェクトを推進しています。</p>
+          <div class="photo">
+            <img src="https://via.placeholder.com/400" alt="田中 満里菜" />
+          </div>
+          <div class="info">
+            <h4>田中 満里菜</h4>
+            <p class="role">営業部 部長</p>
+            <p class="desc">お客様のニーズを最優先に、プロジェクトを推進しています。</p>
+          </div>
         </div>
+
         <div class="team-member">
-          <img src="https://via.placeholder.com/400" alt="山田 太郎" />
-          <h4>山田 太郎</h4>
-          <p class="role">開発部 部長</p>
-          <p class="desc">最新技術を駆使し、革新的な製品開発に取り組んでいます。</p>
+          <div class="photo">
+            <img src="https://via.placeholder.com/400" alt="山田 太郎" />
+          </div>
+          <div class="info">
+            <h4>山田 太郎</h4>
+            <p class="role">開発部 部長</p>
+            <p class="desc">最新技術を駆使し、革新的な製品開発に取り組んでいます。</p>
+          </div>
         </div>
       </div>
     </section>
 
+    <!-- 採用情報 -->
     <section class="recruit-section">
       <h3>採用情報</h3>
       <p>私たちは共に未来を創る仲間を募集しています。</p>
+      <p>エンジニア、営業、マーケティングなど、さまざまな職種で人材を募集中です。</p>
       <a href="saiyou.html">応募はこちらから</a>
     </section>
+
   </main>
 
+  <!-- フッター -->
+  <footer>
+    <p>合同会社アンダーウィル - All Rights Reserved</p>
+  </footer>
+
   <script>
-    // 横流し文字の幅に応じてアニメーション時間を調整する関数
     function setupVisionScroll() {
       const vision = document.getElementById('companyVision');
       const wrapper = vision.parentElement;
 
-      // 文字列の幅
       const visionWidth = vision.offsetWidth;
-      // 親の幅
       const wrapperWidth = wrapper.offsetWidth;
 
-      // アニメーション距離は文字列幅 + 親幅
-      const distance = visionWidth + wrapperWidth;
+      const distance = -(visionWidth + wrapperWidth);
+      const speed = 100; // px/秒
+      const duration = Math.abs(distance) / speed;
 
-      // スクロール速度（px/秒）、お好みで調整してOK
-      const speed = 100; // 100px/sec
-
-      // アニメーション時間 = 距離 / 速度
-      const duration = distance / speed;
-
-      vision.style.animation = `visionScroll ${duration}s linear infinite`;
-      vision.style.paddingLeft = wrapperWidth + 'px';
+      vision.style.setProperty('--scroll-distance', distance + 'px');
+      vision.style.setProperty('--animation-duration', duration + 's');
+      vision.style.setProperty('--padding-left', wrapperWidth + 'px');
     }
 
     window.addEventListener('load', setupVisionScroll);
     window.addEventListener('resize', setupVisionScroll);
   </script>
+
 </body>
 </html>
