--- a/index.html
+++ b/index.html
@@ -1,28 +1,48 @@
+<!DOCTYPE html>
+<html lang="ja">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>合同会社アンダーウィル</title>
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet" />
+
   <style>
+    /* 全体フォントを統一 */
     body, h1, h2, h3, h4, p, a, div, section {
-      font-family: 'M PLUS Rounded 1c', sans-serif !important;
-      /* !importantは後から上書きされないために一部入れました */
+      font-family: 'M PLUS Rounded 1c', sans-serif;
+      color: #333;
     }
 
-    /* ヘッダー */
+    body {
+      background-color: #fefae0;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    /* ヘッダー固定 */
     header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
       height: 80px;
       background: linear-gradient(90deg, #fdf497, #a1c4fd);
       display: flex;
-      align-items: center;
       justify-content: center;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      padding: 0 5%;
+      align-items: center;
       border-bottom: 1px solid #ccc;
       z-index: 100;
+      padding: 0 5%;
     }
 
-    /* ロゴ */
     .logo-container img {
       height: 60px;
       max-width: 100%;
@@ -30,62 +50,132 @@
       display: block;
     }
 
-    /* 企業理念横流し */
+    /* 企業理念 固定かつ目立つ配置 */
     .company-vision-wrapper {
       position: fixed;
-      top: 80px; /* ヘッダーの真下 */
+      top: 80px; /* ヘッダーの下 */
+      left: 0;
       width: 100%;
-      height: 40px;
       background-color: #fff3b0;
-      overflow: hidden;
       border-bottom: 1px solid #ddd;
-      display: flex;
-      align-items: center;
+      padding: 10px 5%;
       z-index: 90;
-    }
-
-    .company-vision {
-      white-space: nowrap;
+      text-align: center;
       font-weight: 700;
-      font-size: 1.3rem;
+      font-size: 1.2rem;
       color: #003049;
-      padding-left: 100%; /* JSで調整 */
-      animation-timing-function: linear;
-      animation-iteration-count: infinite;
-      animation-name: visionScroll;
-      animation-duration: 15s;
-      /* font-familyはbodyと同じでok */
-    }
-
-    @keyframes visionScroll {
-      from {
-        transform: translateX(0);
-      }
-      to {
-        transform: translateX(-100%);
-      }
+      /* 横流しやめて固定表示 */
     }
 
     main {
       max-width: 1100px;
-      margin: 140px auto 60px;
+      margin: 140px auto 60px; /* ヘッダー80 + 企業理念60 */
       padding: 0 5%;
     }
 
-    /* 以下、企業概要、社員紹介、採用情報のスタイル省略（全体に同じフォント適用） */
+    /* 企業概要の見出し */
+    .company-info h3,
+    .team-section h3,
+    .recruit-section h3 {
+      font-weight: 700;
+      font-size: 2.2rem;
+      color: #003566;
+      margin-bottom: 24px;
+    }
+
+    /* 企業概要 */
+    .company-info {
+      background-color: #fff;
+      padding: 40px;
+      border-radius: 10px;
+      margin-bottom: 60px;
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
+    }
+
+    .company-info .info-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 16px 40px;
+      font-size: 1.1rem;
+      color: #444;
+    }
 
     @media (max-width: 768px) {
-      /* 企業理念がスマホで見えない問題対応 */
-      .company-vision-wrapper {
-        height: 50px; /* 少し高さ増やす */
+      .company-info .info-grid {
+        grid-template-columns: 1fr;
       }
-      .company-vision {
-        font-size: 1.1rem;
-      }
+    }
+
+    /* 社員紹介の基本 */
+    .team-members {
+      display: flex;
+      gap: 30px;
+      flex-wrap: wrap;
+      margin-bottom: 60px;
+    }
+
+    .team-member {
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
+      flex: 1 1 300px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+    }
+
+    .team-member .photo img {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+      object-fit: cover;
+      margin-bottom: 15px;
+    }
+
+    .team-member h4 {
+      margin-bottom: 6px;
+    }
+
+    .team-member .role {
+      font-weight: 600;
+      color: #555;
+      margin-bottom: 10px;
+    }
+
+    /* 採用情報 */
+    .recruit-section p {
+      margin-bottom: 10px;
+      font-size: 1.1rem;
+    }
+
+    .recruit-section a {
+      display: inline-block;
+      background-color: #003049;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 6px;
+      font-weight: 700;
+      transition: background-color 0.3s ease;
+    }
+
+    .recruit-section a:hover {
+      background-color: #00509e;
+    }
+
+    /* フッター */
+    footer {
+      text-align: center;
+      padding: 20px 0;
+      color: #666;
+      background-color: #fefae0;
+      border-top: 1px solid #ccc;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
+
   <header>
     <div class="logo-container">
       <img src="https://github.com/machichi2525/my-website1/blob/main/uw_%E3%83%AD%E3%82%B4%E2%91%A0.jpg?raw=true" alt="合同会社アンダーウィル ロゴ" />
@@ -93,40 +183,77 @@
   </header>
 
   <div class="company-vision-wrapper">
-    <div class="company-vision" id="companyVision">
-      企業理念：私たちはお客様の未来を照らし、革新をもたらす企業であり続けます。
-    </div>
+    企業理念：私たちはお客様の未来を照らし、革新をもたらす企業であり続けます。
   </div>
 
   <main>
-    <!-- ここに企業概要、社員紹介、採用情報のセクション -->
+
+    <section class="company-info">
+      <h3>企業概要</h3>
+      <div class="info-grid">
+        <p><strong>会社名：</strong>合同会社アンダーウィル</p>
+        <p><strong>所在地：</strong>〒????-???? 〇〇〇〇</p>
+        <p><strong>代表者：</strong>代表取締役　栁本 浩汰</p>
+        <p><strong>設立：</strong>2024年3月14日</p>
+        <p><strong>資本金：</strong>15万円</p>
+        <p><strong>従業員数：</strong>20名（2025年9月現在）</p>
+        <p><strong>事業内容：</strong>通信事業、Webサイト制作、デジタルマーケティング支援、システム開発</p>
+        <p><strong>主要取引先：</strong>株式会社〇〇、株式会社△△、株式会社□□</p>
+        <p><strong>取引銀行：</strong>〇〇銀行 〇〇支店</p>
+        <p><strong>URL：</strong>https://www.〇〇〇</p>
+      </div>
+    </section>
+
+    <section class="team-section">
+      <h3>社員紹介</h3>
+      <div class="team-members">
+        <div class="team-member">
+          <div class="photo">
+            <img src="https://raw.githubusercontent.com/machichi2525/my-website1/main/S__5603390.jpg" alt="栁本 浩汰" />
+          </div>
+          <div class="info">
+            <h4>栁本 浩汰</h4>
+            <p class="role">代表取締役社長</p>
+            <p class="desc">企業理念を基に、新たな未来を切り開いています。</p>
+          </div>
+        </div>
+
+        <div class="team-member">
+          <div class="photo">
+            <img src="https://via.placeholder.com/400" alt="田中 満里菜" />
+          </div>
+          <div class="info">
+            <h4>田中 満里菜</h4>
+            <p class="role">営業部 部長</p>
+            <p class="desc">お客様のニーズを最優先に、プロジェクトを推進しています。</p>
+          </div>
+        </div>
+
+        <div class="team-member">
+          <div class="photo">
+            <img src="https://via.placeholder.com/400" alt="山田 太郎" />
+          </div>
+          <div class="info">
+            <h4>山田 太郎</h4>
+            <p class="role">開発部 部長</p>
+            <p class="desc">最新技術を駆使し、革新的な製品開発に取り組んでいます。</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="recruit-section">
+      <h3>採用情報</h3>
+      <p>私たちは共に未来を創る仲間を募集しています。</p>
+      <p>エンジニア、営業、マーケティングなど、さまざまな職種で人材を募集中です。</p>
+      <a href="saiyou.html">応募はこちらから</a>
+    </section>
+
   </main>
 
   <footer>
     <p>合同会社アンダーウィル - All Rights Reserved</p>
   </footer>
 
-  <script>
-    function setupVisionScroll() {
-      const vision = document.getElementById('companyVision');
-      const wrapper = vision.parentElement;
-
-      if(!vision || !wrapper) return;
-
-      const visionWidth = vision.scrollWidth;
-      const wrapperWidth = wrapper.offsetWidth;
-
-      vision.style.paddingLeft = wrapperWidth + 'px';
-
-      const scrollDistance = visionWidth + wrapperWidth;
-
-      const speed = 100; // px/sec
-      const duration = scrollDistance / speed;
-
-      vision.style.animationDuration = duration + 's';
-    }
-
-    window.addEventListener('load', setupVisionScroll);
-    window.addEventListener('resize', setupVisionScroll);
-  </script>
 </body>
+</html>
